# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import usersRouter from "./users";
 import rolesRouter from "./roles";
 import dashboardRouter from "./dashboard";
+import storeSettingsRouter from "./store-settings";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(authRouter);
 router.use(usersRouter);
 router.use(rolesRouter);
 router.use(dashboardRouter);
+router.use(storeSettingsRouter);
 
 export default router;
